Add cities I'd like to go

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
             <li>El Paso, TX</li>
             <li>Tampa, FL</li>
         </ul>
+        <ol>
+            <li>Bruges, EU</li>
+            <li>Athens, EU</li>
+            <li>Zaragoza, EU</li>
+        </ol>
     </body>
 </html>
