Add per-item descriptions Add strong and emphasized numbered list

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
         <ul>
             <h1>Cities I've been.</h1>
             <h4>I was born in Muncie, IN in 1997. I moved to El Paso, TX with my parents before I turned 2 becuase they wanted warmer weather. When I was about 8 we then moved to Tampa, FL for still better weather.</h4>
-            <li>Muncie, IN</li>
-            <li>El Paso, TX</li>
-            <li>Tampa, FL</li>
+            <li>Muncie, IN<span> (This is where I was born)</span></li>
+            <li>El Paso, TX<span> (Moved here for warmer weather)</span></li>
+            <li>Tampa, FL<span> (Moved here for better weather still)</span></li>
         </ul>
         <ol>
             <h1>Cities I'd like to go.</h1>
             <h4>I have always been interested in European architechture. The following cities caught my attention in history class.</h4>
-            <li>Bruges, EU</li>
-            <li>Athens, EU</li>
-            <li>Zaragoza, EU</li>
+            <li><strong>Bruges, EU</strong></li>
+            <li><em>Athens, EU</em></li>
+            <li><strong>Zaragoza, EU</strong></li>
         </ol>
     </body>
 </html>
