Add picture, video, and audio

--- a/index.html
+++ b/index.html
@@ -21,4 +21,15 @@
             <li><strong>Zaragoza, EU</strong></li>
         </ol>
     </body>
+    <img class="fit-picture"
+     src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg"
+     alt="Grapefruit slice atop a pile of other slices">
+     <audio controls>
+        <source src="https://bigsoundbank.com/UPLOAD/ogg/0092.ogg" type="audio/ogg">
+      Your browser does not support the audio element.
+      </audio>
+      <video width="332" height="332" controls>
+        <source src="http://distribution.bbb3d.renderfarming.net/video/mp4/bbb_sunflower_1080p_30fps_normal.mp4" type="video/ogg">
+      Your browser does not support the video tag.
+      </video>
 </html>
