Fix link to favorite animals

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       Your browser does not support the audio element.
       </audio>
       <video width="332" height="332" controls>
-        <source src="http://distribution.bbb3d.renderfarming.net/video/mp4/bbb_sunflower_1080p_30fps_normal.mp4" type="video/ogg">
+        <source src="http://techslides.com/demos/sample-videos/small.ogv" type="video/ogg">
       Your browser does not support the video tag.
       </video>
+      <a href="\Ubuntu\home\thefluiddruid97\code\favorites-exercise\index.html">Favorite Animals</a>
 </html>
